removed footer navigation menu location

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Version 1.0.1
 [added] new classes entry-title, updated and author for google microformats structure
 [added] clearfix class to Magazine Homepage widget area
 [removed] unnecessary HTML markup and Genericons in theme-info.php
+[removed] unnecessary footer navigation menu location
 [fixed] styling of footer line and cleaned up CSS in style.css
 
 Version 1.0
