--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,14 @@
 Glades Changelog
 ===================================
 
+Version 1.0.4
+-----------------------------------
+[added] setting to display or hide post date
+[added] setting to display or hide post author
+[added] setting to display or hide post categories
+[added] setting to display or hide post tags
+[fixed] description of widgets and sidebars
+
 Version 1.0.3
 -----------------------------------
 [updated] Featured Content class to new version with many code improvements
