--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Glades Changelog
 ===================================
 
+Version 1.0.5
+-----------------------------------
+[changed] search title HTML markup in search.php
+[changed] archive titles to use the new the_archive_title() function
+[removed] unnecessary template files tag.php, category.php and author.php
+
 Version 1.0.4
 -----------------------------------
 [added] setting to display or hide post date
