added google fonts deactivate setting

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,11 @@
 Glades Changelog
 ===================================
 
+Version 1.0.6
+-----------------------------------
+[added] setting for deactivating default google fonts in case they are not compatible with user language
+[added] translation files for Dutch, Italian, French, Greek, Spanish and German
+
 Version 1.0.5
 -----------------------------------
 [changed] search title HTML markup in search.php
