--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Glades Changelog
 ===================================
 
+Version 1.0.7
+-----------------------------------
+[fixed] deprecating PHP4 style constructors notices in WordPress 4.3
+
 Version 1.0.6
 -----------------------------------
 [added] setting for deactivating default google fonts in case they are not compatible with user language
