--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Glades Changelog
 ===================================
 
+Version 1.0.8
+-----------------------------------
+[improved] code of 404.php and search.php templates
+[improved] phrasing of all translatable text strings
+[updated] translation files
+
 Version 1.0.7
 -----------------------------------
 [fixed] deprecating PHP4 style constructors notices in WordPress 4.3
