--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Glades Changelog
 ===================================
 
+Version 1.0.9
+-----------------------------------
+[moved] register_widget functions to widgets_init action hook to fix widget translation
+[improved] customizer sections to be translation-ready
+[updated] German translation file
+
 Version 1.0.8
 -----------------------------------
 [improved] code of 404.php and search.php templates
