added escaping for translation strings for improved security

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Glades Changelog
 ===================================
 
+Version 1.1.2
+-----------------------------------
+[added] escaping for translation strings for improved security
+
 Version 1.1.1
 -----------------------------------
 [added] postmeta setting to Category Posts Boxed widget
