--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,11 @@
 Glades Changelog
 ===================================
 
+Version 1.1.3
+-----------------------------------
+[changed] all h2 post and page titles to h1 for better SEO
+[fixed] postmeta styling for widget bundle
+
 Version 1.1.2
 -----------------------------------
 [added] escaping for translation strings for improved security
