--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Glades Changelog
 
 Version 1.1.4
 -----------------------------------
+[added] basic support for wooCommerce
+[added] email icon to social menu
 [fixed] styling of 404 template
 [updated] language files for French
 
