--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Glades Changelog
 ===================================
 
+Version 1.1.5
+-----------------------------------
+[added] custom header image settings
+
 Version 1.1.4
 -----------------------------------
 [added] basic support for wooCommerce
