--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Glades Changelog
 Version 1.1.5
 -----------------------------------
 [added] custom header image settings
+[added] theme links in theme options panel
 
 Version 1.1.4
 -----------------------------------
