--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,10 @@
 Glades Changelog
 ===================================
 
+Version 1.1.7
+-----------------------------------
+[added] support for Jetpack Infinite Scroll feature
+
 Version 1.1.6
 -----------------------------------
 [added] previous/next post navigation on single post view
