--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,12 @@
 Glades Changelog
 ===================================
 
+Version 1.1.9
+-----------------------------------
+[added] selective refresh support in customizer for sidebars and widgets
+[added] version numbers to wp_enqueue_style and wp_enqueue_script functions
+[updated] flexlider, html5shiv and Genericons
+
 Version 1.1.8
 -----------------------------------
 [added] support for new custom logo feature from WordPress 4.5
